web-client/app/styles/main.scss
@import "bourbon";
@import "neat";

@import url(http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);

*{
  padding:0;
  margin:0;
  direction: rtl;

  &:focus {
    outline: none;
  }
}

a {
  text-decoration: none;
  cursor: pointer;
}

body, html {
  height: 100%;
  min-width: initial !important;
}

body {
  font-family: 'Droid Arabic Naskh', serif !important;
  background: #f9f9f9;
  font-size: 12px;
}

.container{
  @include span-columns(12);
  background-color: #f9f9f9;
  height: 100%;
  backface-visibility:hidden;
  -webkit-backface-visibility:hidden; /* Chrome and Safari */
  -moz-backface-visibility:hidden; /* Firefox */
  -ms-backface-visibility:hidden; /* Internet Explorer 10+ */
}

.scrollable{
  overflow: auto;
  transition-property: top, bottom;
  transition-duration: .2s, .2s;
  transition-timing-function: linear, linear;
  overflow-scrolling: touch;
}

.tray {
  padding: 0 30px;
  max-width: 1200px;
  margin: 0 auto;
  position: relative;
}

.main-header {
  background: #fff;
  box-shadow: 0 -2px 6px 0 #333;
  position: relative;

  .hero-unit {
    vertical-align: middle;

    &:before {
      content: "";
      display: block;
      height: 20%;
    }

    h1 {
      font-size: 2.2em;
      display: inline-block;
      vertical-align: middle;
    }

    p {
      font-size: 0.9em;
      display: inline-block;
      vertical-align: middle;
    }
  }
}

.manshar-logo {
  width: 35px;
}

.manshar-tagline,
.manshar-snippet {
  color: #666;
}

.site-nav-logo {
  position: fixed;
  top: 0.6667em;
  left: 30px;
  width: 3em;
  z-index: 5;
  cursor: pointer;
}

.site-nav {
  background-color: #fff;
  color: #F2F1F0;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  width: 266px;
  box-shadow: -4px 0 9px -7px #333 inset;

  .profile-badge {
    position: relative;
    min-height: 60px;

    a {
      span {
        position: absolute;
        color: white;
        bottom: 0;
        padding: 15px;
        font-size: 1em;
        text-shadow: 1px 1px 1px #000;
      }

      img {
        width: 100%;
        display: block;
      }
    }
  }

  ul {
    margin: 20px 10px 0 0;
    list-style: none;
    line-height: 30px;
    letter-spacing: 1px;

    a {
      color: #101010;

      &::before, &::after {
        display: inline-block;
        opacity: 0;
        transition: transform 0.3s, opacity 0.2s;
      }

      &::before {
        margin-right: 10px;
        content: '[';
        transform: translateX(20px);
      }

      &::after {
        margin-left: 10px;
        content: ']';
        transform: translateX(-20px);
      }

      &:hover::before,  &:hover::after,  &:focus::before,  &:focus::after {
        opacity: 1;
        transform: translateX(0px);
      }
    }
  }
}

.author-details {
  text-align: center;

  img {
    width: 65px;
    border-radius: 500px;
    border: 2px solid white;
  }

  .author-name {
    font-size: 0.9em;
  }
}

.card {
  background-color: #fff;
  box-shadow: 0 1px 5px -2px #000;

  .header {
    position: relative;
    color: white;
    text-shadow: 0px 1px 3px #000;

    .image-cover {
      height: 25em;
    }

    .title {
      color: #fff;
      bottom: 0;
      padding: 0 1.5em 1.5em 1.5em;
      position: absolute;
      left: 0;
      right: 0;

      .manshar-tagline {
        color: #eee;
      }
    }

    .author-details {
      .author-name {
        color: white;
        text-shadow: 0px 0px 2px #000;
      }

      img {
        border-color: white;
      }
    }

  }

  .content {
    padding: 1.5em;
  }
}


ul.manshar-articles-list {
  width: 100%;
  margin: 0 auto;
  list-style: none;
  word-wrap: break-word;

  li {
    margin: 2em 0;
    cursor: pointer;
  }
}

.manshar-snippet {
  font-size: 1em;
}

.manshar-article {
  backface-visibility:hidden;
  -webkit-backface-visibility:hidden; /* Chrome and Safari */
  -moz-backface-visibility:hidden; /* Firefox */
  -ms-backface-visibility:hidden; /* Internet Explorer 10+ */

  height: 100%;

  .manshar-article-image-container {
    height: 100%;
    position: relative;
    background-color: #303030;
    z-index: 9;

    &.half {
      height: 50%;
    }

    .manshar-article-header {
      width: 100%;

      position: absolute;
      bottom: 50px;
      right: 0;
      left: 0;
      z-index: 99;

      h1 {
        font-size: 3em;
        padding: 20px 0;
      }

      h2 {
        font-size: 1.6em;
        font-weight: 100;
      }

    }
  }

  .article-content-container {
    background: #f9f9f9;
    padding-bottom: 10px;
    backface-visibility:hidden;
    -webkit-backface-visibility:hidden; /* Chrome and Safari */
    -moz-backface-visibility:hidden; /* Firefox */
    -ms-backface-visibility:hidden; /* Internet Explorer 10+ */

    article {
      padding: 30px 0;
      font-size: 1.3em;
      min-height: 300px !important;
      width: 100%;
      margin: 0 auto;
      font-weight: 100;
      word-wrap: break-word;

      pre {
        direction: ltr;
        margin: 10px;
        display: block;
      }

      blockquote {
        border-right: #f88 5px solid;
        padding: 10px 20px;
        margin-right: 20px;
        margin: 36px 0;
        color: #999;
        font-size: 1.1em;
      }

      p {
        margin: 36px auto;
      }

      span {
        // Chrome has a bug that adds font-size on span elements in
        // content editable stuff. This will make sure it takes the same size
        // as it is parent paragraph.
        font-size: 1.0em !important;
        font-family: inherit !important;
      }

      hr {
        width: 200px;
        height: 1px;
        margin: 20px auto;
        background-color: #eee;
        border: none;
      }

      figure {
        text-align: center;

        img {
          max-width: 100%;
        }
      }

      h1 {
        font-size: 1.75em;
        padding-top: 20px;
      }

      h2 {
        font-size: 1.4em;
      }

      ul, ol {
        margin-right: 70px;
      }

      p {
        margin-top: 36px;
      }
    }

    h3 {
      font-size: 1.5em;
    }
  }

}

.metabar {
  z-index: 2;
  position: fixed;
  bottom: 50px;
  left: 0;

  backface-visibility:hidden;
  -webkit-backface-visibility:hidden; /* Chrome and Safari */
  -moz-backface-visibility:hidden; /* Firefox */
  -ms-backface-visibility:hidden; /* Internet Explorer 10+ */
}

.manshar-controls {
  height: 18px;
  text-align: left;
  margin-top: -1.3em;

  backface-visibility:hidden;
  -webkit-backface-visibility:hidden; /* Chrome and Safari */
  -moz-backface-visibility:hidden; /* Firefox */
  -ms-backface-visibility:hidden; /* Internet Explorer 10+ */

  button {
    font-size: 1.2em;
    padding: 10px 10px;
    border: 0;
    box-shadow: 0 3px 14px -3px #000;
    background-color: #CA1504;
    color: #fff;
    width: 50px;
    height: 50px;
    line-height: 1;
    border-radius: 40px;

    &:hover {
      background-color: #DB2615;
    }
  }
}

/* Match medium.css editor */
.manshar-article article p:first-child {
  margin-top: 0;
}

.manshar-article article p:last-child{
  margin-bottom: 0;
}

/* TODO(mkhatib): Consider removing Medium styles all together. */
/* Override some medium styles */
.Medium .Medium-placeholder{
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)" !important;
  filter: alpha(opacity=100) !important;
  opacity: 1 !important;
}


.form-div {

  margin: auto;
  position: absolute;
  top: 100px;
  left: 0;
  right: 0;
  width: 300px;
  height: 400px;

  header {
    @include row(table);

    img {
      float: right;
    }

    h1 {
      color: #3A3A3A;
      padding-right: 85px;
    }
  }

  .form-errors {
    background: #CA1504;
    color: #FFFFFF;
    line-height: 40px;
    padding: 4px;
    text-align: center;
  }

  form{
    @include row(table);
    padding: 10px 0;

    input, .input{
      display: block;
      border: 2px solid #ECEBEC;
      font-size: 1.25em;
      margin: 20px 3px;
      padding: 10px;
      border-radius: 5px;
      width: 300px;
      transition: 300ms ease;

      &:invalid {
        border-left: 4px solid #ECEBEC;
        box-shadow: 0 0 0px;
      }

      &:focus:invalid {
        border-left: 4px solid #E66565;
        box-shadow: 0 0 0px;
      }

      &:focus:valid, &:valid {
        border-left: 4px solid #44B387;
        box-shadow: 0 0 0px;
      }
    }

    button {
      @include button(simple, #e48184);
      font-size: 1.25em;
      padding : 10px 125px;
    }

    .info{
      margin: 10px 0;
      font-size: 0.7em;
      color: #bbbaba;

      .signup-link {
        background-color: #F3EFEE;
        border-radius: 8px;
        color: #272F36;
        font-size: 1.25em;
        margin-left: 6px;
        padding: 2px;
      }
    }
  }
}

// Load simple code style for the editor.
// For rendering the code we use highlight.js
.manshar-editor pre {
  padding: 25px;
  background-color: #333;
  color: white;
}

.g-body .text-menu .options {
  height: 40px;
  width: 184px;

  .url {
    font-family: 'icomoon' !important;
  }
}

.g-body .image-tooltip {
  z-index: 9999;
  position: fixed !important;
}

